Modifica al pom